--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ body {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.1);
   padding: 20px;
@@ -52,14 +55,17 @@ body {
 }
 
 .card h2 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
   color: #ecf0f1;
+  flex: 1;
 }
 
 .card p {
   color: #bdc3c7;
+  font-size: 18px;
   margin-bottom: 10px;
+  flex: 1;
 }
 
 button {
@@ -72,6 +78,7 @@ button {
   font-weight: bold;
   position: relative;
   border-radius: 12px;
+  margin-top: 5px;
 }
 button::before {
   content: "";
